--- a/.i3/config
+++ b/.i3/config
@@ -12,29 +12,27 @@
 set $mod Mod4
 
 # font for window titles. ISO 10646 = Unicode
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-font pango:DejaVu Sans Mono, Terminus Bold Semi-Condensed 11
+font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
+#bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Return exec terminator
 
 # kill focused window
 bindsym Mod1+Q kill
-# lock screen
-bindsym Control+Mod1+L exec i3lock
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
-
+#bindsym $mod+j focus left
+#bindsym $mod+k focus down
+#bindsym $mod+l focus up
+#bindsym $mod+semicolon focus right
+#
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
@@ -92,16 +90,16 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+exclam move container to workspace 1
-bindsym $mod+Shift+at move container to workspace 2
-bindsym $mod+Shift+numbersign move container to workspace 3
-bindsym $mod+Shift+dollar move container to workspace 4
-bindsym $mod+Shift+percent move container to workspace 5
-bindsym $mod+Shift+asciicircum move container to workspace 6
-bindsym $mod+Shift+ampersand move container to workspace 7
-bindsym $mod+Shift+asterisk move container to workspace 8
-bindsym $mod+Shift+parenleft move container to workspace 9
-bindsym $mod+Shift+parenright move container to workspace 10
+bindsym $mod+Shift+exclam move workspace 1
+bindsym $mod+Shift+at move workspace 2
+bindsym $mod+Shift+numbersign move workspace 3
+bindsym $mod+Shift+dollar move workspace 4
+bindsym $mod+Shift+percent move workspace 5
+bindsym $mod+Shift+asciicircum move workspace 6
+bindsym $mod+Shift+ampersand move workspace 7
+bindsym $mod+Shift+asterisk move workspace 8
+bindsym $mod+Shift+parenleft move workspace 9
+bindsym $mod+Shift+parenright move workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+C reload
@@ -109,54 +107,61 @@ bindsym $mod+Shift+C reload
 bindsym $mod+Shift+R restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+E exit
-# lock screen
-bindsym $mod+Control+L i3lock
-#open Chromium
-bindsym $mod+C exec /usr/bin/chromium-browser
 
+bindsym $mod+r mode "resize"
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym j resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym $mod+j           resize shrink width 10 px or 10 ppt
+        bindsym $mod+k           resize grow height 10 px or 10 ppt
+        bindsym $mod+l           resize shrink height 10 px or 10 ppt
+        bindsym $mod+semicolon   resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
-        #bindsym 113 resize shrink width 10 px or 10 ppt
-        #bindsym 116 resize grow height 10 px or 10 ppt
-        #bindsym 111 resize shrink height 10 px or 10 ppt
-        #bindsym 114 resize grow width 10 px or 10 ppt
+        bindsym Left        resize shrink width 10 px or 10 ppt
+        bindsym Down        resize grow height 10 px or 10 ppt
+        bindsym Up          resize shrink height 10 px or 10 ppt
+        bindsym Right       resize grow width 10 px or 10 ppt
+             
+
 
         # back to normal: Enter or Escape
         bindsym Return mode "default"
         bindsym Escape mode "default"
 }
 
-bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
         position top
-	mode dock
-	status_command i3status
+        status_command i3status
+        colors { 
+                #statusline #0099cc
+                statusline #00ff33
+                background #000009
+                focused_workspace $gray2 $gray2  #ffffff
+                inactive_workspace $gray1 $gray1 #000009
+        }
 }
+
 exec_always ibus-daemon  #start ibus daemon
 exec_always ibus restart  #start ibus daemon
 exec_always xmodmap -e "clear lock" #disable caps lock switch
 exec_always xmodmap -e "keysym Caps_Lock = Escape" #set caps_lock as escape
-exec xrandr --output VGA1 --auto --right-of LVDS1 # set multiple screen
+#exec xrandr --output VGA1 --auto --right-of LVDS1 # set multiple screen
+exec xrandr --output VGA1 --rotate left --right-of LVDS1 # set multiple screen
+#exec xrandr --output VGA2 --rotate left --right-of LVDS2 # set multiple screen
 exec_always nautilus --no-default-window #show desktop
 
 #bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+ unmute
-#bindsym XF86AudioLowerVolume  exec amixer -q set Master 5%- unmute
+##bindsym XF86AudioLowerVolume  exec amixer -q set Master 5%- unmute
 bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
 bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
 bindsym XF86AudioMute exec amixer -q set Master toggle
+# lock screen
+bindsym Mod4+Control+L i3-lock
+#open Chromium
+#bindsym $mod+C exec /usr/bin/chromium-browser
+#open google-chrome
+bindsym $mod+C exec /usr/bin/google-chrome
 
